Fix: Minor changes to the styling

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
       <ul class="navbar-item">
         {% if user.is_authenticated %}
         <li>
-          <a href="/logout">Logout</a>
+          <a href="/logout" class="button is-danger">Logout</a>
         </li>
         {% endif %}
       </ul>
